--- a/gb/25/11/28/n14645014.md
+++ b/gb/25/11/28/n14645014.md
@@ -12,12 +12,12 @@
 <p>此外，BTS明年即将发行的新专辑，以及4月底启动的全球巡回演唱会，都让粉丝满怀期待。大家都在关注他们将以何种全新面貌回归舞台。</p>
 <p>责任编辑：苏漾</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/3/28/n14469415.md#1">Jung Kook捐10亿韩元 盼受灾户找回平静日常</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/21/n14578112.md#1">Jung Kook单曲《Seven》 Spotify播放量逾25亿次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14624920.md#1">《放飞旅行团》首映会??Jung Kook惊现挺车银优</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14626964.md#1">Jung Kook现身烤肉店 独自用餐照引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11248062.md#1" target="_blank">共产暴政录：共产革命前后的古巴华人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/5/n11500416.md#1" target="_blank">滴水穿石 乌克蘭夫妇的坚韧诚心感化民众</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/22/n10077365.md#1" target="_blank">金剑：阶级斗争是民族毁灭的动力</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
