--- a/gb/25/11/27/n14644481.md
+++ b/gb/25/11/27/n14644481.md
@@ -11,12 +11,12 @@
 <p>此外，主办方还邀请到“金曲制造机”萧秉治、情歌歌手陈势安、J.Sheon、派伟俊Patrick Brasca、新生代女团HUR+及流行乐团icyball冰球乐团，9组卡司金曲连发，要让歌迷一起K歌一整晚。</p>
 <p>责任编辑：辛幼安</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14589741.md#1">徐若瑄登日本大阪活动 演唱欧阳菲菲经典曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/13/n14615102.md#1">徐若瑄新片扮女法医 为戏剪去30公分长发</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642013.md#1">徐若瑄登台北 Billboard Live 歌单全“客制化”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645580.md#1">传任天堂准备将《银河战士》改编成电影</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/13/n10138788.md#1" target="_blank">中共进入联合国与尼克松访华内幕（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/1/n10824187.md#1" target="_blank">一本书让70岁的她成为有福人</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
