--- a/gb/25/12/5/n14649675.md
+++ b/gb/25/12/5/n14649675.md
@@ -2,19 +2,19 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>吃错燕麦咖啡 血糖血脂飙危机</h2>
-<a href="https://doh73o6c3dnba.cloudfront.net/R6rBQNAHCnYj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dsqxb3b7muii1.cloudfront.net/G4hBQNAHCnYg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>控糖族必看：吃错燕麦竟让血糖暴冲！这些咖啡组合好伤身！</p><p>吃燕麦就代表更健康、血糖更稳定？不一定！大多数的市售燕麦产品虽然看起来超健康，但有些加工程度高，当心会变成血糖喷射机！控糖族、减重族该避免的燕麦产品与咖啡是哪些？不爱黑咖啡、不能喝牛奶，咖啡加什么才健康又好喝？</p><h2><span style="color:#008000">今日专家</span></h2><p>张维浚
-〈可苡营养谘询中心〉营养师
+〈可苡营养咨询中心〉营养师
 〈美商营养品公司医学部〉专员</p><p>+〈台湾营养学会〉肾脏专科营养师
 +〈糖尿病卫教学会〉糖尿病卫教师
 +〈肥胖研究学会〉体重管理营养师
-+〈台湾运动营养学会〉运动营养谘询师
++〈台湾运动营养学会〉运动营养咨询师
 + 前〈双和医院〉营养师
 +〈FIT TAIWAN ESN 基础运动营养学课程〉专任讲师
 +〈药师全国公会 2019药师网路继续教育课程〉讲师
-+ 着作《癌症患者吃什么 - 十大癌症营养处方》</p><h2><span style="color:#008000">时间</span></h2><p>美东时间早上9点：12/5 周二 9:00am
-中港台时间晚上10点：12/5 周二 10:00pm</p><p>每周二-周六锁定直播：<strong><a class="health-article-hover-class" href=""></a><a href="https://doh73o6c3dnba.cloudfront.net/R6rBQNAHCnYj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UC8I3-FAdFC-S9NyT204lTIw" target="_blank" rel="noopener" target="_blank" class="health-article-hover-class">防疫身心灵</a></strong>
++ 著作《癌症患者吃什么 - 十大癌症营养处方》</p><h2><span style="color:#008000">时间</span></h2><p>美东时间早上9点：12/5 周二 9:00am
+中港台时间晚上10点：12/5 周二 10:00pm</p><p>每周二-周六锁定直播：<strong><a class="health-article-hover-class" href=""></a><a href="https://dsqxb3b7muii1.cloudfront.net/G4hBQNAHCnYg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/channel/UC8I3-FAdFC-S9NyT204lTIw" target="_blank" rel="noopener" target="_blank" class="health-article-hover-class">防疫身心灵</a></strong>
 身处纷乱之世，心存<strong><a class="health-article-hover-class" href="https://www.ntdtv.com/b5/%E5%81%A5%E5%BA%B7.md#1" target="_blank" rel="noopener" target="_blank" class="health-article-hover-class">健康</a></strong>之道，就看<strong><a class="health-article-hover-class" href="https://www.ntdtv.com/b5/prog1407" target="_blank" rel="noopener" target="_blank" class="health-article-hover-class">健康1+1</a></strong></p><div class=" lg:hidden"><div class="m-auto flex items-center justify-center overflow-hidden print:hidden" style="min-height:266px;padding:8px 8px 8px 8px" data-testid="ad-container-DJY_M_article_336x280_2"><div id="DJY_M_article_336x280_2"></div></div></div><p>责任编辑：沁莲
 <hr>
 <strong>相关新闻：</strong>
@@ -23,7 +23,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11010192.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/22/n8022581.md#1" target="_blank">因祸得福，我用生命迎接春天</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/18/n11120824.md#1" target="_blank">共产暴政录：5.12汶川地震后 中共嫁祸法轮功</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
